--- a/CTA/CustomTeamAssigner/RoleDescFinder.xaml
+++ b/CTA/CustomTeamAssigner/RoleDescFinder.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d"
-      d:DesignHeight="720" d:DesignWidth="1280" FontSize="24"
+      d:DesignHeight="680" d:DesignWidth="1260" FontSize="24"
       Title="Role Description Finder">
     
     <Page.Resources>
@@ -44,6 +44,12 @@
                             </Storyboard>
                         </BeginStoryboard>
                     </Trigger.EnterActions>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="#1E1E1E"/>
+                    <Setter Property="Foreground" Value="#707070"/>
+                    <Setter Property="Opacity" Value="0.5"/>
+                    <Setter Property="Cursor" Value="Arrow"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -99,7 +105,7 @@
         </Style>
     </Page.Resources>
     
-    <Grid>
+    <Grid Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -111,6 +117,10 @@
 
         <TextBox x:Name="RoleNameTextBox" Grid.Row="0" Margin="10" ToolTip="Enter role name"/>
         <Button x:Name="FindDescriptionButton" Grid.Row="1" Margin="10" Content=" Find Description " Click="FindDescription"/>
-        <TextBlock x:Name="RoleDescriptionTextBlock" Grid.Row="2" Margin="10" TextWrapping="Wrap" Text="Type in the name of a role in the input field, then click on Find Description. If everything goes right, it will display the description of the role you typed here."/>
+        <Border Grid.Row="2" Background="#2D2D2D" CornerRadius="20" Padding="20" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock x:Name="RoleDescriptionTextBlock" Margin="10" TextWrapping="Wrap" FontSize="14"
+                       Text="Type in the name of a role in the input field in one word, then click on Find Description. If everything goes right, it will display the description of the role you typed here." />
+        </Border>
+        <Button x:Name="BackButton" Grid.Row="2" Margin="10" Content=" Back " VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="BackToMain"/>
     </Grid>
 </Page>
